# helloword-env

./: README.md
ch01-LLVM/: readme.md
ch01-LLVM/demo-01-printLLVM-IR-Pass/: CMakeLists.txt  printLLVMIR.cpp  readme.md  test.ll
ch02-OpenCV/demo-01-OpenCV-Helloword/: CMakeLists.txt  main.cpp  readme.md
ch03-loop-unrolled-sse-avx-neno/: readme.md
ch03-loop-unrolled-sse-avx-neno/demo-01-loop-unrolled/: CMakeLists.txt  main.cpp  readme.md
ch03-loop-unrolled-sse-avx-neno/demo-02-loopUnrolled+sse/: CMakeLists.txt  main.cpp  readme.md
ch03-loop-unrolled-sse-avx-neno/demo-02-loopUnrolled+sse-aligned/: CMakeLists.txt  main.cpp
ch03-loop-unrolled-sse-avx-neno/demo-03-loopUnrolled+avx2/: CMakeLists.txt  main.cpp  readme.md  run.sh
